force-app/main/default/objects/Account_Plan_Flow_Details__c/Account_Plan_Flow_Details__c.object-meta.xml
<CustomObject>
    <label>Account Plan Flow Details</label>
    <nameField>
        <displayFormat>FD-{0000000}</displayFormat>
        <label>Account Plan Flow Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Flow Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>