force-app/main/default/objects/Account_Plan_Flow_Details__c/fields/Account_Plan_Flow_Header__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Flow_Header__c</fullName>
    <label>Account Plan Flow Header</label>
    <referenceTo>Account_Plan_Flow_Header__c</referenceTo>
    <relationshipLabel>Account Plan Flow Details</relationshipLabel>
    <relationshipName>Account_Plan_Flow_Details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>