force-app/main/default/objects/Account_Plan_Flow_Details__c/fields/Account_Plan_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Wallet__c</fullName>
    <label>Account Plan Wallet</label>
    <referenceTo>AcctPlanWallet__c</referenceTo>
    <relationshipLabel>Account Plan Flow Details</relationshipLabel>
    <relationshipName>Account_Plan_Flow_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>