force-app/main/default/objects/Account_Plan_Flow_Details__c/fields/FeeCharge__c.field-meta.xml
<CustomField>
    <fullName>FeeCharge__c</fullName>
    <label>Fee charge (adjust by RM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>