force-app/main/default/objects/Account_Plan_Flow_Details__c/fields/NoOfTransaction__c.field-meta.xml
<CustomField>
    <fullName>NoOfTransaction__c</fullName>
    <label>No. of transactions (Average per Month)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>