force-app/main/default/objects/Account_Plan_Flow_Details__c/fields/Pattern__c.field-meta.xml
<CustomField>
    <fullName>Pattern__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>