force-app/main/default/objects/Account_Plan_Flow_Details__c/fields/SharedBank1__c.field-meta.xml
<CustomField>
    <fullName>SharedBank1__c</fullName>
    <label>%share-[Bank1]</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>