force-app/main/default/objects/Account_Plan_Flow_Details__c/fields/SharedBank2__c.field-meta.xml
<CustomField>
    <fullName>SharedBank2__c</fullName>
    <label>%share-[Bank2]</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>