force-app/main/default/objects/Account_Plan_Flow_Details__c/fields/StandardFee__c.field-meta.xml
<CustomField>
    <fullName>StandardFee__c</fullName>
    <label>Standard Fee (Reference)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>