force-app/main/default/objects/Account_Plan_Flow_Details__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <label>Domestic (Vol.) (Average per Month)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>