force-app/main/default/objects/Account_Plan_Flow_Details__c/fields/VolumePercent__c.field-meta.xml
<CustomField>
    <fullName>VolumePercent__c</fullName>
    <label>% Vol.</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>